swagger documentation added for all methods
